# AIvilization

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_service.py
docker/: Dockerfile.agent
src/aivilization/: config.py  main.py
src/aivilization/cli/: app.py
src/aivilization/core/: agent.py  civilization.py  events.py  memory.py  message.py  sandbox.py  tool.py
src/aivilization/llm/: claude.py
src/aivilization/storage/: json_store.py
src/aivilization/tools/: builtin.py  registry.py  toolification.py
src/aivilization/web/: server.py
src/aivilization/web/static/: style.css
src/aivilization/web/templates/: agent_detail.html  base.html  dashboard.html
tests/: test_agent.py  test_civilization.py  test_sandbox.py  test_toolification.py  test_tools.py
